Adjustments in functions and created a new testfile
